--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-icons": "^4.12.0",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.3",
-    "tailwind-merge": "^1.13.2"
+    "tailwind-merge": "^1.13.2",
+    "web3": "^4.4.0",
+    "web3-utils": "^4.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
