Added FAQ, added Blast Chain

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.3",
     "boxicons": "^2.1.4",
     "clsx": "^1.2.1",
+    "ethers": "5",
     "framer-motion": "^10.17.0",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.260.0",
@@ -45,9 +46,9 @@
     "@tailwindcss/forms": "^0.5.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@thirdweb-dev/chains": "^0.1.70",
+    "@thirdweb-dev/chains": "^0.1.76",
     "@thirdweb-dev/react": "^3.11.0",
-    "@thirdweb-dev/sdk": "^3.10.17",
+    "@thirdweb-dev/sdk": "^4.0.40",
     "@types/memory-cache": "^0.2.5",
     "@types/react": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
