--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,6 @@ yarn-error.log*
 next-env.d.ts
 
 # next-sitemap
-robots.txt
-sitemap.xml
-sitemap-*.xml
+# robots.txt
+# sitemap.xml
+# sitemap-*.xml
