--- a/package.json
+++ b/package.json
@@ -26,16 +26,21 @@
     "ethers": "5",
     "framer-motion": "^10.17.0",
     "fs": "^0.0.1-security",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.260.0",
     "memory-cache": "^0.2.0",
+    "minidenticons": "^4.2.1",
     "next": "^13.4.10",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-image-crop": "^11.0.5",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.13.2",
+    "use-sound": "^4.0.1",
     "web3": "^4.4.0",
     "web3-utils": "^4.1.1"
   },
