--- a/package.json
+++ b/package.json
@@ -19,19 +19,25 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "@vercel/analytics": "^1.2.2",
     "@xata.io/client": "^0.28.3",
     "axios": "^1.6.3",
     "boxicons": "^2.1.4",
-    "clsx": "^1.2.1",
+    "clsx": "^2.1.1",
     "ethers": "5",
-    "framer-motion": "^10.17.0",
+    "framer-motion": "^11.2.6",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
+    "i": "^0.3.7",
     "lucide-react": "^0.260.0",
     "memory-cache": "^0.2.0",
+    "mini-svg-data-uri": "^1.4.4",
     "minidenticons": "^4.2.1",
     "next": "^13.4.10",
+    "npm": "^10.8.0",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-cookie": "^7.1.4",
@@ -40,7 +46,8 @@
     "react-image-crop": "^11.0.5",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.3",
-    "tailwind-merge": "^1.13.2",
+    "simplex-noise": "^4.0.1",
+    "tailwind-merge": "^2.3.0",
     "use-sound": "^4.0.1",
     "web3": "^4.4.0",
     "web3-utils": "^4.1.1"
