--- a/.xatarc
+++ b/.xatarc
@@ -1,5 +1,5 @@
 {
-  "databaseURL": "https://Soulmans-Workspace-mk3gtt.eu-central-1.xata.sh/db/mint-heaven",
+  "databaseURL": "YOUR_XATA_DB_URL",
   "codegen": {
     "output": "src/xata.ts"
   }
