--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
@@ -26,13 +29,15 @@
     "@xata.io/client": "^0.28.3",
     "axios": "^1.6.3",
     "boxicons": "^2.1.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "5",
     "framer-motion": "^11.2.6",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
     "i": "^0.3.7",
-    "lucide-react": "^0.260.0",
+    "ipfs-http-client": "^60.0.1",
+    "lucide-react": "^0.475.0",
     "memory-cache": "^0.2.0",
     "mini-svg-data-uri": "^1.4.4",
     "minidenticons": "^4.2.1",
@@ -42,12 +47,15 @@
     "react-confetti-explosion": "^2.1.2",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.5",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.3",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.3.0",
+    "swr": "^2.3.2",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "thirdweb": "^5.88.4",
     "use-sound": "^4.0.1",
     "web3": "^4.4.0",
     "web3-utils": "^4.1.1"
@@ -66,7 +74,7 @@
     "@types/react": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.10",
     "eslint-config-prettier": "^8.8.0",
@@ -76,10 +84,11 @@
     "jest": "^27.5.1",
     "next-router-mock": "^0.7.5",
     "next-sitemap": "^2.5.28",
-    "postcss": "^8.4.26",
+    "postcss": "^8.5.3",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "3.3.3",
     "typescript": "^4.9.5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
