--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 *.pem
 /.vscode
 .vscode
+.xatarc
 
 # debug
 npm-debug.log*
@@ -30,6 +31,7 @@ yarn-error.log*
 # local env files
 .env
 .env*.local
+
 
 # vercel
 .vercel
@@ -42,3 +44,6 @@ next-env.d.ts
 # robots.txt
 # sitemap.xml
 # sitemap-*.xml
+.xatarc
+.gitignore
+src/xata.ts
