Upgrade Next.js and React, optimize image loading, and refactor components
- Upgrade Next.js to v15.2.1 and React to v19.0.0
- Update package dependencies and resolve potential conflicts
- Implement Next.js Image component in TopMinter and AiGenerationSection
- Remove deprecated FormMintNft component
- Optimize image loading with dynamic imports and Suspense
- Update Next.js configuration for improved image optimization
- Remove unused components and refactor file structure

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "mint-heaven",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "@openzeppelin/contracts": "^4.8.3",
+    "@openzeppelin/contracts-upgradeable": "^4.9.3",
+    "nanoid": "^5.0.9",
+    "parse-duration": "^2.1.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -41,12 +47,12 @@
     "memory-cache": "^0.2.0",
     "mini-svg-data-uri": "^1.4.4",
     "minidenticons": "^4.2.1",
-    "next": "^13.4.10",
+    "next": "^15.2.1",
     "npm": "^10.8.0",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
     "react-confetti-explosion": "^2.1.2",
     "react-cookie": "^7.1.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.5",
     "react-tippy": "^1.4.0",
@@ -61,15 +67,10 @@
     "web3-utils": "^4.1.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.3.0",
+    "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^16.2.4",
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/forms": "^0.5.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@thirdweb-dev/chains": "^0.1.76",
-    "@thirdweb-dev/react": "^3.11.0",
-    "@thirdweb-dev/sdk": "^4.0.40",
     "@types/memory-cache": "^0.2.5",
     "@types/react": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
